# better-cloudflare

./: .gitignore  .tmp_dnsmanager_old.tsx  Cargo.toml  Dockerfile  README-TAURI.md  README.md  TODO-TAURI-MIGRATION.md  TODO.md  components.json  docker-compose.yml  eslint-full.json  eslint-output.json  eslint-serverapi.json  eslint-spf.json  eslint-tests.json  index.html  next.config.cjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  postcss.config.js  proxy-server.ts  readme.md  server.ts  spec.md  tailwind.config.js  tauri.conf.json  tsconfig.app.json  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo  typedoc.json  vite.config.js  vite.config.ts
.github/workflows/: autopublish.yml  ci.yml  format.yml  lint.yml  test-package.yml
app/: layout.tsx  page.tsx
crates/bc-cloudflare-api/src/: types.rs
crates/bc-crypto/: Cargo.toml
crates/bc-crypto/src/: lib.rs
crates/bc-dns-tools/: Cargo.toml
crates/bc-dns-tools/src/: export.rs  import.rs  structured.rs  validate.rs
crates/bc-mcp/: Cargo.toml
crates/bc-mcp/src/: lib.rs
crates/bc-registrar/: Cargo.toml
crates/bc-registrar/src/: godaddy.rs  google.rs  lib.rs  namecheap.rs  namecom.rs  porkbun.rs  types.rs
crates/bc-spf/: Cargo.toml
crates/bc-storage/: Cargo.toml
crates/bc-storage/src/: lib.rs
docs/: design-system.md  future-work.md  passkey-architecture.md  spf-naptr.md  tauri-migration.md
e2e/: debug-a11y.js  debug-a11y.mjs  home.spec.ts  hydration-monkey.spec.ts
scripts/: check-spf.ts  cleanup-src-js.ts  debug-rbac-run.ts  fill-i18n.py  migrate-vault-to-sqlite.js  migrate-vault-to-sqlite.ts  run-local.sh  run-tests-seq.ts
src/: App.js  App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/crates/bc-ai-agent/: Cargo.toml
src-tauri/crates/bc-ai-agent/src/: agent.rs  config.rs  events.rs  lib.rs  manager.rs  presets.rs
src-tauri/crates/bc-ai-chat/: Cargo.toml
src-tauri/crates/bc-ai-chat/src/: context.rs  conversation.rs  history.rs  lib.rs  system.rs  types.rs
src-tauri/crates/bc-ai-provider/: Cargo.toml
src-tauri/crates/bc-ai-provider/src/: anthropic.rs  config.rs  error.rs  lib.rs  ollama.rs  openai.rs  traits.rs  types.rs
src-tauri/crates/bc-ai-tools/: Cargo.toml
src-tauri/crates/bc-ai-tools/src/: converter.rs  executor.rs  lib.rs  registry.rs  safety.rs
src-tauri/crates/bc-biometrics/: Cargo.toml
src-tauri/crates/bc-biometrics/src/: fallback.rs  lib.rs  macos.rs
src-tauri/crates/bc-cloudflare-api/: Cargo.toml
src-tauri/crates/bc-cloudflare-api/src/: lib.rs  types.rs
src-tauri/crates/bc-dns-tools/src/: lib.rs
src-tauri/crates/bc-domain-audit/: Cargo.toml
src-tauri/crates/bc-error/: Cargo.toml
src-tauri/crates/bc-error/src/: lib.rs
src-tauri/crates/bc-error/tests/: error_test.rs
src-tauri/crates/bc-mcp/: Cargo.toml
src-tauri/crates/bc-mcp/src/: lib.rs  prompts.rs  protocol.rs  resources.rs  schemas.rs
src-tauri/crates/bc-mcp/src/tools/: audit_tools.rs  cloudflare.rs  dns_tools.rs  mod.rs  spf_tools.rs
src-tauri/crates/bc-mcp/tests/: mcp_test.rs
src-tauri/crates/bc-passkey/: Cargo.toml
src-tauri/crates/bc-registrar/src/: cloudflare.rs
src-tauri/crates/bc-session/: Cargo.toml
src-tauri/crates/bc-session/src/: lib.rs
src-tauri/crates/bc-session/tests/: session_test.rs
src-tauri/crates/bc-spf/src/: lib.rs
src-tauri/crates/bc-storage/: Cargo.toml
src-tauri/crates/bc-storage/src/: lib.rs
src-tauri/crates/bc-topology/: Cargo.toml
src-tauri/crates/bc-topology/src/: lib.rs
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: ai_commands.rs  audit.rs  cloudflare_api.rs  commands.rs  crypto.rs  main.rs  mcp_server.rs  passkey.rs  registrar_commands.rs  session.rs  spf.rs  storage.rs
src-tauri/src/commands/: audit.rs  auth.rs  dns.rs  mod.rs  services.rs
src-tauri/src/registrar/: cloudflare.rs  godaddy.rs  google.rs  mod.rs  namecheap.rs  namecom.rs  porkbun.rs  types.rs
src/hooks/: use-ai-chat.ts  use-cloudflare-api.js  use-cloudflare-api.ts  use-hotkeys.ts  use-i18n.ts  use-idle-timer.ts  use-login-form.ts  use-registrar-monitor.ts  use-toast.js  use-toast.ts
src/lib/: async-handler.js  async-handler.ts  audit.ts  cloudflare.js  cloudflare.ts  credential-store.ts  crypto-benchmark.js  crypto-benchmark.ts  crypto.js  crypto.ts  dns-parsers.js  dns-parsers.ts  domain-audit.ts  env.js  env.ts  environment.ts  export-api.ts  rbac.ts  server-api.js  server-api.ts  server-client.js  server-client.ts  simplewebauthn-wrapper.ts  spf.ts  sqlite-driver.ts  storage-util.js  storage-util.ts  storage.js  storage.ts  tauri-client.ts  tlds.ts  utils.js  utils.ts  validation.js  validation.ts  vault-manager.ts  webauthn.ts
src/locales/: ar-SA.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  hi-IN.json  id-ID.json  ja-JP.json  ko-KR.json  pt-PT.json  ru-RU.json  zh-CN.json
src/server/: cors.js  cors.ts  error-handler.ts  errorHandler.js  errorHandler.ts  router.js  router.ts  vault.ts
src/types/: ai.ts  dns.js  dns.ts  express.d.ts  keytar.d.ts  react-window.d.ts  registrar.ts
test/: AddRecordDialog.test.tsx  AuditLogDialog.test.tsx  DNSManager.audit.test.tsx  LanguageSelector.test.tsx  LoginActionButtons.test.tsx  LoginForm.test.tsx  LoginKeySelector.test.tsx  LoginPasskeySection.test.tsx  PasskeyManagerDialog.test.tsx  RecordRow.test.tsx  addrecorddialog.spf.test.ts  apiErrorHandler.test.ts  benchmark.test.ts  cloudflareApi.test.ts  corsMiddleware.test.ts  cryptoManager.test.ts  dnsManagerFilter.test.ts  environment.test.ts  errorHandler.test.ts  naptr.test.ts  offlineCache.test.ts  panelExports.test.ts  rbac.test.ts  record-type-labels.test.ts  serverApiValidation.test.ts  serverBulkImport.test.ts  serverClient.desktop.test.ts  serverClient.spf.test.ts  serverClient.test.ts  serverPasskey.test.ts  serverVault.test.ts  serverVaultAuth.test.ts  spf-debug.test.ts  spf.test.ts  sqlite-driver.test.ts  sqlite-fallback.test.ts  sqliteCredentialStore.test.ts  storageAutoRefresh.test.ts  storageManager.test.ts  storagePref.test.ts  (+12 more)
(+136 files in other folders)
