[workspace]
members = [
    "src-tauri",
    "crates/bc-crypto",
    "crates/bc-storage",
    "crates/bc-cloudflare-api",
    "crates/bc-spf",
    "crates/bc-passkey",
    "crates/bc-registrar",
    "crates/bc-topology",
    "crates/bc-mcp",
]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
