[workspace]
members = [
    "src-tauri",
    "src-tauri/crates/bc-crypto",
    "src-tauri/crates/bc-storage",
    "src-tauri/crates/bc-cloudflare-api",
    "src-tauri/crates/bc-spf",
    "src-tauri/crates/bc-passkey",
    "src-tauri/crates/bc-registrar",
    "src-tauri/crates/bc-topology",
    "src-tauri/crates/bc-mcp",
    "src-tauri/crates/bc-dns-tools",
    "src-tauri/crates/bc-domain-audit",
    "src-tauri/crates/bc-biometrics",
    "src-tauri/crates/bc-ai-provider",
    "src-tauri/crates/bc-ai-chat",
    "src-tauri/crates/bc-ai-tools",
    "src-tauri/crates/bc-ai-agent",
]
resolver = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
