[package]
name = "better-cloudflare"
version = "0.0.0"
description = "Cloudflare DNS Manager with passkey support"
authors = ["Better Cloudflare Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
aes-gcm = "0.10"
rand = "0.8"
keyring = "2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
trust-dns-resolver = "0.23"
ipnet = "2"
rfd = "0.15"
dirs = "5"
axum = { version = "0.7", features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
sqlite-backend = ["sqlx"]
