[package]
name = "better-cloudflare"
version = "0.0.0"
description = "Cloudflare DNS Manager with passkey support"
authors = ["Better Cloudflare Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
dirs = "5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# Workspace crates
bc-crypto = { path = "../crates/bc-crypto" }
bc-storage = { path = "../crates/bc-storage" }
bc-cloudflare-api = { path = "../crates/bc-cloudflare-api" }
bc-spf = { path = "../crates/bc-spf" }
bc-passkey = { path = "../crates/bc-passkey" }
bc-registrar = { path = "../crates/bc-registrar" }
bc-topology = { path = "../crates/bc-topology" }
bc-mcp = { path = "../crates/bc-mcp" }
bc-dns-tools = { path = "../crates/bc-dns-tools" }
bc-domain-audit = { path = "../crates/bc-domain-audit" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
sqlite-backend = ["sqlx"]
