[package]
name = "bc-crypto"
version = "0.1.0"
edition = "2021"
description = "PBKDF2 + AES-256-GCM encryption primitives for Better Cloudflare"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
