[package]
name = "bc-registrar"
version = "0.1.0"
edition = "2021"
description = "Registrar API clients for domain monitoring (Cloudflare, Porkbun, Namecheap, GoDaddy, Google, Name.com)"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
