[package]
name = "bc-storage"
version = "0.1.0"
edition = "2021"
description = "Secure keyring/memory storage layer for Better Cloudflare"

[dependencies]
bc-crypto = { path = "../bc-crypto" }
keyring = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
