[package]
name = "bc-ai-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
bc-ai-provider = { path = "../bc-ai-provider" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4", "serde"] }
