[package]
name = "bc-ai-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
bc-ai-provider = { path = "../bc-ai-provider" }
bc-mcp = { path = "../bc-mcp" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
