[package]
name = "bc-biometrics"
version = "0.1.0"
edition = "2021"
description = "Platform biometric authentication (Touch ID, Windows Hello) for Better Cloudflare"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework-sys = "2"
core-foundation = "0.9"
core-foundation-sys = "0.8"
