[package]
name = "bc-cloudflare-api"
version = "0.1.0"
edition = "2021"
description = "Cloudflare REST API client for Better Cloudflare"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
