[package]
name = "bc-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) JSON-RPC server for Cloudflare DNS and SPF tools"

[dependencies]
axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bc-cloudflare-api = { path = "../bc-cloudflare-api" }
bc-dns-tools = { path = "../bc-dns-tools" }
bc-domain-audit = { path = "../bc-domain-audit" }
bc-spf = { path = "../bc-spf" }
bc-topology = { path = "../bc-topology" }
