[package]
name = "bc-topology"
version = "0.1.0"
edition = "2021"
description = "DNS topology resolution, CNAME chain following, IP geolocation, and service probing"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
